<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharedTracking</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    
 <!-- menu activity strings -->
 	
 	<!-- main menu -->   
	 <string name="menu_activity_title">Shared Tracking</string>    
     <string name="new_tracked_session_button_string">Organize</string>
     <string name="new_tracking_session_button_string">Follow</string>
     <string name="empty_list">No Existing Session</string>
     
     <!-- creation dialog strings -->
     
     <string name="tracked_session_creation_title_dialogue">Organize New Session</string>
     <string name="tracked_session_creation_prepared_tab_title">Advanced</string>
     <string name="tracked_session_creation_immediate_tab_title">Immediate</string>
     <string name="tracked_session_contribution_tab_title">Contribute</string>
     
     <string name="tracking_session_creation_title_dialogue">Follow Existing Session</string>
 
     
     <string name="session_name_title">Name</string>
     <string name="session_rate_title">Upload Period</string>
     <string name="session_starting_time_title">Starting Time</string>
      <string name="session_starting_date_title">Starting Date</string>
     <string name="session_ending_time_title">Ending Time</string>
     <string name="session_ending_date_title">Ending Date</string>
     <string name="session_public_ID_title">Token</string>
     <string name="session_password_title">Password</string>
     
     
     <string name="immediate_hosted_session_description">Simple way to share your position: 
         Choose a name and a location upload period, you will then receive a token that enables you
         to share your location.
         </string>

     <string name="prepared_hosted_session_description">Advanced way to share your position: 
         Choose a name, a location upload period, a password and a tracking time span. You will 
         then receive a token that enables you to share your location.
         Other devices can be tracked within this session, as contributors.
         </string>
     
     <string name="contribution_session_description">Share your position as part of an existing tracking
         session. Submit the token and the password associated to the session you want to contribute to.
         </string>
         
     <string name="joined_session_description">
         Past here tokens that people have shared with you in order to track their location.
     	</string>
     
     <string name="session_creation_validation">OK</string>
     <string name="session_creation_cancelation">Cancel</string>
     
    <string-array name="rates_array">
        <item>10 sec.</item>
        <item>30 sec.</item>
        <item>1 min.</item>
        <item>2 min.</item>
        <item>5 min.</item>
        <item>15 min.</item>
        <item>30 min.</item>
    </string-array>
    
    <!-- session deletion dialog -->
    <string name="session_deletion_title_dialogue">Delete Session</string>
    <string name="session_deletion_description">"Do you really want to delete session : "</string>
    
    
    <string name="network_failure_message">Network Unreachable</string>
    
    <!-- session Items in List View -->
    
    <string name="item_start_title">Start :</string> 
    <string name="item_end_title">End :</string> 
    
    
   <!-- session activity strings --> 
    
     <string name="session_activity_from_date">From</string>
     <string name="session_activity_to_date">To</string>
     <string name="session_activity_sample_number">Samples</string>
     
     <string name="public_ID_instructions">Enable people to track you in sharing the token below with them</string>
     <string name="button_copy_token_label">Copy</string>
     <string name="button_stop_tracking">Stop Tracking</string>
     <string name="button_share">Share Token</string>
     
     
  	<!-- session activity setting strings -->
	
	<string name="pref_session_name_item">Change Session Name</string>
	<string name="pref_session_rate_item">Change Upload Period</string>
	<string name="pref_session_starting_date_item">Reschedule Starting Date</string>
	<string name="pref_session_starting_time_item">Reschedule Starting Time</string>
	<string name="pref_session_ending_date_item">Reschedule Ending Date</string>
	<string name="pref_session_ending_time_item">Reschedule Ending Time</string>
	
	<string name="pref_session_name_title">New Session Name</string>
	<string name="pref_session_rate_title">New Upload Period</string>
	
	<string name="pref_session_starting_date_title">New Starting Date</string>
	<string name="pref_session_starting_time_title">New Starting Time</string>
	
	<string name="pref_session_starting_message">Tracking start can be rescheduled before
	    session starts running, but it can only be postponed</string>
	
	<string name="pref_session_ending_date_title">New Ending Date</string>
	<string name="pref_session_ending_time_title">New Ending Time</string>
	
	<string name="pref_session_ending_message">Tracking end can be rescheduled before session completes</string>
	
	<!-- Notification Strings -->
	<string name="notification_title_plural">Some sessions are currently running</string>
	<string name="notification_title_singular">A session is currently running</string>
	
	<string name="notification_text_tracked_session_plural">" hosted sessions"</string>
	<string name="notification_text_tracked_session_singular">" hosted session"</string>
	<string name="notification_text_tracking_session_plural">" joined sessions"</string>
	<string name="notification_text_tracking_session_singular">" joined session"</string>
	
<!-- Colors -->
	<color name="black">#000000</color>
	<color name="blue">#3f51b5</color>
	<color name="lightBlue">#DEF4FA</color>
	<color name="lightBlue2">#5C6AC3</color>
	<color name="gray">#EDEDED</color>
	<color name="mediumGray">#CCCCCC</color>
	<color name="darkGray">#808080</color>
    <color name="red">#FF0000</color>
    <color name="green">#32CD32</color>
    <color name="yellow">#FFD700</color>
    <color name="white">#FFFFFF</color>
    
   <!-- Description for pictures -->
   <string name="picDesc">"Shared Tracking Image"</string>
   
</resources>
