<?xml version="1.0" encoding="utf-8"?>
<!-- Preference setting menu for tracked sessions -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="vertical"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content">

    <!-- Name Setting --> 
    <Button
        android:id="@+id/pref_session_name"
        android:text="@string/pref_session_name_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
    	android:paddingStart="5dp"
    	android:paddingEnd="10dp"
    	android:paddingLeft="5dp"
    	android:paddingRight="10dp"
        android:background="@drawable/preference_button_background"/>
    
    
    <!-- Rate Setting -->
    <Button
        android:id="@+id/pref_session_rate"
        android:text="@string/pref_session_rate_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
       	android:paddingStart="5dp"
    	android:paddingEnd="10dp"
    	android:paddingLeft="5dp"
    	android:paddingRight="10dp"
        android:background="@drawable/preference_button_background"/>
    
    <!-- Starting Time Setting -->
    <Button
	    android:id="@+id/pref_starting_time"
	    android:text="@string/pref_session_starting_time_item"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
       	android:paddingStart="5dp"
    	android:paddingEnd="10dp"
    	android:paddingLeft="5dp"
    	android:paddingRight="10dp"
        android:background="@drawable/preference_button_background"/>
    
    <!-- Starting Date Setting -->
    <Button
	    android:id="@+id/pref_starting_date"
	    android:text="@string/pref_session_starting_date_item"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
       	android:paddingStart="5dp"
    	android:paddingEnd="10dp" 
    	
    	android:paddingLeft="5dp"
    	android:paddingRight="10dp"
        android:background="@drawable/preference_button_background"/>
    
    <!-- Ending Time Setting -->
    <Button
	    android:id="@+id/pref_ending_time"
	    android:text="@string/pref_session_ending_time_item"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
       	android:paddingStart="5dp"
    	android:paddingEnd="10dp"
    	android:paddingLeft="5dp"
    	android:paddingRight="10dp"
        android:background="@drawable/preference_button_background"/>
    
    <!-- Ending Date Setting -->
    <Button
	    android:id="@+id/pref_ending_date"
	    android:text="@string/pref_session_ending_date_item"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
       	android:paddingStart="5dp"
    	android:paddingEnd="10dp"
    	
    	android:paddingLeft="5dp"
    	android:paddingRight="10dp"
        android:background="@drawable/preference_button_background"/>
    
    
    
</LinearLayout>