<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
 	android:layout_gravity="fill_horizontal"
    tools:context="com.example.sharedtracking.MenuActivity">
    

    <LinearLayout
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            android:orientation="vertical" >
        </ListView>
    
    <TextView 
    android:id="@android:id/empty"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/empty_list" 
    android:layout_weight="50"
    android:layout_gravity="center"/>
        
    <LinearLayout
    android:id="@+id/adding_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
	    
	   <Button 
	    android:id="@+id/add_tracking"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:text="@string/new_tracking_session_button_string" 
	    android:textStyle="bold"
	    android:onClick="joinSession"
	    android:textColor="@color/blue"
		android:background="@drawable/button_menu_background"
		android:padding="15dp"
		android:paddingLeft="15dp"
    	android:paddingRight="15dp"
    	android:layout_margin="10dp"
    	android:layout_weight="1"/>
	   
	  	<Button 
	  	android:id="@+id/add_tracked"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:text="@string/new_tracked_session_button_string"
	    android:textStyle="bold"
	    android:onClick="createHostedSession"
	    android:textColor="@color/blue"
		android:background="@drawable/button_menu_background"
		android:padding="15dp"
		android:paddingLeft="15dp"
    	android:paddingRight="15dp"
    	android:layout_margin="10dp"
    	android:layout_weight="1"/>
	        
        
    </LinearLayout>
        
        
        
   	</LinearLayout>



</RelativeLayout>

           		
