<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sharedtracking.TrackedActivity" >
    
    
    <LinearLayout 
    android:id="@+id/global_layout"
   	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
        <!-- Status of the tracked session -->
        
    	<ImageView
		android:id="@+id/tracked_session_status"        
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    	
    	 <!-- Public ID layout of the tracked session -->
    	 
    	<LinearLayout
    	android:id="@+id/public_ID_global_layout"
   		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/simple_blue_background">
    	
    		<TextView
	      	android:id="@+id/tracked_session_public_ID_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:text="@string/public_ID_instructions"/>
    		
			<View
			  android:layout_width="match_parent"
			  android:layout_height="50dp"/>
    			
	    	<TextView
	      	android:id="@+id/tracked_session_public_token"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textColor="@color/blue"
	        android:background="@drawable/simple_white_background"
	        android:padding="5dp"
	        android:gravity="center"
	        android:textIsSelectable="true"/>
	       

    	</LinearLayout>
    	
    	<!-- Layout for starting, ending times and sampling info -->
    	
    	<LinearLayout
    	android:id="@+id/sampling_global_layout"
   		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:orientation="vertical">
    
    		<LinearLayout 
		    android:id="@+id/tracked_session_label_layout"        
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
    	
    			<TextView
	        	android:id="@+id/tracked_session_starting_timestamp_label"
	        	android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/session_activity_from_date"
	        	android:gravity="center"
	        	android:layout_weight="1"/>
		  
				<TextView
	        	android:id="@+id/tracked_session_ending_timestamp_label"
	        	android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/session_activity_to_date"
	        	android:gravity="center"
	        	android:layout_weight="1"/>
				
				<TextView
	        	android:id="@+id/tracked_session_sample_number_label"
	        	android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/session_activity_sample_number"
	        	android:gravity="center"
	        	android:layout_weight="1"/>
			</LinearLayout>
			    
			<LinearLayout 
		    android:id="@+id/tracked_session_first_values_layout"        
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	       
		       <TextView
		        	android:id="@+id/tracked_session_starting_time"
		        	android:layout_width="0dp"
		        	android:layout_height="wrap_content"
		        	android:gravity="center"
		        	android:textAppearance="?android:attr/textAppearanceLarge"
		        	android:layout_weight="1"/>
		        
		        <TextView
		        	android:id="@+id/tracked_session_ending_time"
		        	android:layout_width="0dp"
		        	android:layout_height="wrap_content"
		        	android:gravity="center"
		        	android:textAppearance="?android:attr/textAppearanceLarge"
		        	android:layout_weight="1"/>
		        
		        <TextView
		        	android:id="@+id/tracked_session_submitted_sample"
		        	android:layout_width="0dp"
		        	android:layout_height="wrap_content"
		        	android:gravity="center"
		        	android:textAppearance="?android:attr/textAppearanceLarge"
		        	android:layout_weight="1"/>
	        
	        </LinearLayout>
	        
			<LinearLayout 
		    android:id="@+id/tracked_session_second_values_layout"        
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	       
		       <TextView
		        	android:id="@+id/tracked_session_starting_date"
		        	android:layout_width="0dp"
		        	android:layout_height="wrap_content"
		        	android:gravity="center"
		        	android:textAppearance="?android:attr/textAppearanceLarge"
		        	android:layout_weight="1"/>
		        
		        <TextView
		        	android:id="@+id/tracked_session_ending_date"
		        	android:layout_width="0dp"
		        	android:layout_height="wrap_content"
		        	android:gravity="center"
		        	android:textAppearance="?android:attr/textAppearanceLarge"
		        	android:layout_weight="1"/>
		        
		        <TextView
		        	android:id="@+id/tracked_session_sampling_rate"
		        	android:layout_width="0dp"
		        	android:layout_height="wrap_content"
		        	android:gravity="center"
		        	android:layout_weight="1"/>
	        
	        </LinearLayout>
			
        </LinearLayout>
        
    	<Button 
    	android:id="@+id/tracked_session_stop_tracking"
  		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_stop_tracking"
	    android:onClick="stopTracking"
	   	android:textColor="@color/blue"
		android:background="@drawable/button_menu_background"
		android:padding="15dp"
    	android:layout_margin="10dp"
	    android:layout_gravity="center"/>
        
    	
    	
    </LinearLayout>    
    
    
   </merge>