<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/tabhost">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- TabWidget that will hold the Tabs -->
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Layout that will hold the content of the Tabs -->
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
         
			<!-- First Tab Immediate Creation -->
				<LinearLayout
				    android:id="@+id/immediate_creation_layout"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical"
				    android:padding="20dp">
				    
				    <TextView
				    android:id="@+id/immediate_hosted_session_description"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:textStyle="italic"
				    android:text="@string/immediate_hosted_session_description"/>
			    
				    <LinearLayout
				    android:id="@+id/immediate_creation_name_setting_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_marginTop="15dp"
				    android:layout_marginBottom="15dp"
				    android:layout_marginStart="15dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginEnd="30dp"
				    android:layout_marginRight="30dp"
				    android:gravity="center_vertical|start">
				    
				            <ImageView
				        	android:id="@+id/immediate_creation_name_setting_icon"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:src="@drawable/ic_loyalty_gray_24dp"
				        	android:layout_weight="1"/>
				                
				           	<EditText
				        	android:id="@+id/immediate_creation_name_setting_editText"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:layout_gravity="center"
				        	android:hint="@string/session_name_title"
				        	android:inputType="text"
				        	android:maxLines="1"
				        	android:layout_weight="5"/>
				                  
				            
				    </LinearLayout>
				    
				   <LinearLayout
				    android:id="@+id/immediate_creation_rate_setting_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_marginTop="15dp"
				    android:layout_marginBottom="15dp"
				    android:layout_marginStart="15dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginEnd="30dp"
				    android:layout_marginRight="30dp"
				    android:gravity="center_vertical|start">
			    
				            <ImageView
				        	android:id="@+id/immediate_creation_rate_setting_icon"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:src="@drawable/ic_refresh_gray_24dp"
				        	android:layout_weight="1"/>
				                
				           	<Spinner
				    		android:id="@+id/immediate_creation_rate_spinner"
				    		android:layout_width="0dp"
				    		android:layout_height="wrap_content"
				    		android:layout_weight="5"
				    		android:layout_marginEnd="40dp"
				    		android:layout_marginRight="40dp"/>
				                  
				            
				    </LinearLayout>
				    
			    
			   	 </LinearLayout>
			    
			
			<!-- Second Tab Immediate Creation -->
				<ScrollView
				android:id="@+id/prepared_creation_layout"
				android:layout_width="match_parent"
			   	android:layout_height="match_parent">
				
				<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent" 
			    android:orientation="vertical"
			    android:padding="20dp">
				           	
				  	<TextView
				    android:id="@+id/prepared_hosted_session_description"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textStyle="italic"
				    android:text="@string/prepared_hosted_session_description"/>
			    
				    <LinearLayout
				    android:id="@+id/prepared_creation_name_setting_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"				   
				    android:layout_marginTop="15dp"
				    android:layout_marginBottom="15dp"
				    android:layout_marginStart="15dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginEnd="30dp"
				    android:layout_marginRight="30dp"
				    android:gravity="center_vertical|start">
				    
				            <ImageView
				        	android:id="@+id/prepared_creation_name_setting_icon"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:src="@drawable/ic_loyalty_gray_24dp"
				        	android:layout_weight="1"/>
				                
				           	<EditText
				        	android:id="@+id/prepared_creation_name_setting_editText"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:layout_gravity="center"
				        	android:hint="@string/session_name_title"
				        	android:inputType="text"
				        	android:maxLines="1"
				        	android:layout_weight="5"/>
				           	
				            
				    </LinearLayout>
				    
				    
				    
				    <LinearLayout
				    android:id="@+id/prepared_creation_rate_setting_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_marginTop="15dp"
				    android:layout_marginBottom="15dp"
				    android:layout_marginStart="15dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginEnd="30dp"
				    android:layout_marginRight="30dp"
				    android:gravity="center_vertical|start">
				    
				            <ImageView
				        	android:id="@+id/prepared_creation_rate_setting_icon"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:src="@drawable/ic_refresh_gray_24dp"
				        	android:layout_weight="1"/>
				                
				           	<Spinner
				    		android:id="@+id/prepared_creation_rate_spinner"
				    		android:layout_width="0dp"
				    		android:layout_height="wrap_content" 
				    		android:layout_weight="5"
				    		android:layout_marginEnd="40dp"
				    		android:layout_marginRight="40dp"
				    		android:textAppearance="?android:attr/textAppearanceMedium"/>
				                  
				            
				    </LinearLayout>
				    
				    
					
				    
				    <LinearLayout
				    android:id="@+id/prepared_creation_password_setting_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_marginTop="15dp"
				    android:layout_marginBottom="15dp"
				    android:layout_marginStart="15dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginEnd="30dp"
				    android:layout_marginRight="30dp"
				    android:gravity="center_vertical|start">
				    
				            <ImageView
				        	android:id="@+id/prepared_creation_password_setting_icon"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:src="@drawable/ic_lock_gray_24dp"
				        	android:layout_weight="1"/>
				                
				           	<EditText
				        	android:id="@+id/prepared_creation_password_setting_editText"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:layout_gravity="center"
				        	android:hint="@string/session_password_title"
				        	android:inputType="text"
				        	android:maxLines="1"
				        	android:layout_weight="5"/>
				                  
				            
				    </LinearLayout>
				    
				
				    
				   <LinearLayout
				    android:id="@+id/prepared_creation_startingDate_setting_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_marginTop="25dp"
				    android:layout_marginBottom="15dp"
				    android:layout_marginStart="15dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginEnd="30dp"
				    android:layout_marginRight="30dp"
				    android:gravity="center_vertical|start">
				           	
								        
					<ImageView
					android:id="@+id/prepared_creation_time_setting_icon"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_access_time_gray_24dp"
					android:layout_weight="1"/>
								                
					<TextView
					android:id="@+id/prepared_creation_startingDate_selector"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:gravity="start"
					android:hint="@string/session_starting_date_title"
					android:layout_weight="2.5"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:clickable="true"
					android:onClick="onStartingDateClicked"/>
					
					<TextView
					android:id="@+id/prepared_creation_startingTime_selector"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:gravity="end"
					android:hint="@string/session_starting_time_title"
					android:layout_weight="2.5"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:clickable="true"
					android:onClick="onStartingTimeClicked"/>
				        

				                  
				            
				    </LinearLayout>
				    
			
			
				   <LinearLayout
				    android:id="@+id/prepared_creation_endingDate_setting_layout"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    android:layout_marginTop="15dp"
				    android:layout_marginBottom="15dp"
				    android:layout_marginStart="15dp"
				    android:layout_marginLeft="15dp"
				    android:layout_marginEnd="30dp"
				    android:layout_marginRight="30dp"
				    android:gravity="center_vertical|start">
				    
			
				    <View
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:visibility="invisible"
					android:layout_weight="1"/>
								                
					<TextView
					android:id="@+id/prepared_creation_endingDate_selector"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:gravity="start"
					android:hint="@string/session_ending_date_title"
					android:layout_weight="2.5"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:clickable="true"
					android:onClick="onEndingDateClicked"/>
					
					<TextView
					android:id="@+id/prepared_creation_endingTime_selector"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:gravity="end"
					android:hint="@string/session_ending_time_title"
					android:layout_weight="2.5"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:clickable="true"
					android:onClick="onEndingTimeClicked"/>
				        
				         
				        
				               
				            
				    </LinearLayout>
				    	     
			    
			   	 </LinearLayout>
			   	 
				</ScrollView>
				
				<!-- 3rd tab for session contribution -->
				
				<LinearLayout
				    android:id="@+id/contribution_layout"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical"
				    android:padding="20dp">
				
				    <TextView
				    android:id="@+id/contribution_session_description"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:textStyle="italic"
				    android:text="@string/contribution_session_description"/>
				
					     <LinearLayout
					    android:id="@+id/contribution_publicID_layout"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:orientation="horizontal"
					    android:layout_marginTop="15dp"
					    android:layout_marginBottom="15dp"
					    android:layout_marginStart="15dp"
					    android:layout_marginLeft="15dp"
					    android:layout_marginEnd="30dp"
					    android:layout_marginRight="30dp"
					    android:gravity="center_vertical|start">
					    
					            <ImageView
					        	android:id="@+id/contribution_publicID_icon"
					        	android:layout_width="0dp"
					        	android:layout_height="wrap_content"
					        	android:src="@drawable/ic_vpn_key_gray_24dp"
					        	android:layout_weight="1"/>
					                
					           	<EditText
					        	android:id="@+id/contribution_publicID_editText"
					        	android:layout_width="0dp"
					        	android:layout_height="wrap_content"
					        	android:layout_gravity="center"
					        	android:hint="@string/session_public_ID_title"
					        	android:inputType="text"
				        		android:maxLines="1"
					        	android:layout_weight="5"/>
					                  
					            
					    </LinearLayout>
					    
						     
					    
					  	<LinearLayout
				    	android:id="@+id/contribution_password_layout"
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
					    android:layout_marginTop="15dp"
					    android:layout_marginBottom="15dp"
					    android:layout_marginStart="15dp"
					    android:layout_marginLeft="15dp"
					    android:layout_marginEnd="30dp"
					    android:layout_marginRight="30dp"
					    android:gravity="center_vertical|start">
				    
				            <ImageView
				        	android:id="@+id/contribution_password_icon"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:src="@drawable/ic_lock_gray_24dp"
				        	android:layout_weight="1"/>
				                
				           	<EditText
				        	android:id="@+id/contribution_password_editText"
				        	android:inputType="textPassword"
				        	android:layout_width="0dp"
				        	android:layout_height="wrap_content"
				        	android:layout_gravity="center"
				        	android:hint="@string/session_password_title"
				        	android:maxLines="1"
				        	android:layout_weight="5"/>
				                  
				            
				    </LinearLayout>
				    
				
				    
				
			   	</LinearLayout> 
	
  		  </FrameLayout>
    
           
            

    </LinearLayout>
	
	
	</TabHost>